Backend/Add-task/deploy.yaml
apiVersion: apps/v1               
kind: Deployment
metadata:
  name: add-deploy
spec:
  replicas: 3
  selector:
    matchExpressions:
      - key: app
        operator: In 
        values:
        - addtask
  template:
    metadata:
      labels:
        app: addtask
    spec:
      containers:
      - name: addtaskct
        image: ashishkashyap92/addtask
        ports:
        - containerPort: 8000
