Backend/Add-task/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: addtask-svc
spec:
  selector:
    app: addtask
  ports:
  - port: 80                 #service port
    targetPort: 8000         #container port
